[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "cmake>=3.24.0,<4.0.0",
    "packaging>=23",
]
build-backend = "setuptools.build_meta"

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501", "F405"]

[tool.ruff.lint.isort]
known-first-party = ["amrex", "picmistandard", "pywarpx", "warpx"]

[tool.isort]
known_first_party = ["amrex", "picmistandard", "pywarpx", "warpx"]
profile = "black"
